# my-playground-neo4j

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  example.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
scripts/: start-neo4j.sh  stop-neo4j.sh
