[project]
name = "my-playground-neo4j"
version = "0.1.0"
description = "Neo4j playground project for learning and experimentation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "neo4j>=5.0.0",
]

# パッケージとして公開しない設定
[tool.uv.sources]
my-playground-neo4j = { workspace = true }


[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff",
]

[tool.ruff]
# Pythonバージョン設定
target-version = "py39"

# ルール設定
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

# 除外するファイル・ディレクトリ
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# 行の長さ
line-length = 88

# フォーマット設定
[tool.ruff.format]
# 引用符の設定
quote-style = "double"

# インデント設定
indent-style = "space"

# 行末の改行
skip-magic-trailing-comma = false

# import設定
[tool.ruff.lint.isort]
known-first-party = ["my-playground-neo4j"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=html --cov-report=term-missing"